--- a/selenium_hybrid_framework/test-output/old/Suite/classes.html
+++ b/selenium_hybrid_framework/test-output/old/Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.visionit.orangehrm.testCases.Login_Tc_001</td>
+<td>com.visionit.orangehrm.testCases.AddUserTC_002</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginOrangeHrmTest</td>
+<td>addNewUserTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
