--- a/selenium_hybrid_framework/test-output/old/Suite/methods-alphabetical.html
+++ b/selenium_hybrid_framework/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="abef66">  <td>20/11/26 18:26:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Tc_001.loginOrangeHrmTest()[pri:0, instance:com.visionit.orangehrm.testCases.Login_Tc_001@55f3ddb1]">loginOrangeHrmTest</td> 
-  <td>main@1782704802</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>20/11/26 18:23:47</td>   <td>-132919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp(java.lang.String)[pri:0, instance:com.visionit.orangehrm.testCases.Login_Tc_001@55f3ddb1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1782704802</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>20/11/26 18:23:37</td>   <td>-142458</td> <td title="&gt;&gt;TestBase.setupSuite()[pri:0, instance:com.visionit.orangehrm.testCases.Login_Tc_001@55f3ddb1]">&gt;&gt;setupSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1782704802</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>20/11/26 18:26:27</td>   <td>27893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.visionit.orangehrm.testCases.Login_Tc_001@55f3ddb1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1782704802</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/12/12 09:18:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddUserTC_002.addNewUserTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.visionit.orangehrm.testCases.AddUserTC_002@3532ec19]">addNewUserTest</td> 
+  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="a6e1f4">  <td>20/12/12 09:19:16</td>   <td>29282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddUserTC_002.addNewUserTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.visionit.orangehrm.testCases.AddUserTC_002@3532ec19]">addNewUserTest</td> 
+  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>20/12/12 09:17:46</td>   <td>-60725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp(java.lang.String)[pri:0, instance:com.visionit.orangehrm.testCases.AddUserTC_002@3532ec19]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>20/12/12 09:17:44</td>   <td>-62441</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setupExtent()[pri:0, instance:com.visionit.orangehrm.testCases.AddUserTC_002@3532ec19]">&gt;&gt;setupExtent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>20/12/12 09:17:41</td>   <td>-65433</td> <td title="&gt;&gt;TestBase.setupSuite()[pri:0, instance:com.visionit.orangehrm.testCases.AddUserTC_002@3532ec19]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>20/12/12 09:19:15</td>   <td>28292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown(org.testng.ITestResult)[pri:0, instance:com.visionit.orangehrm.testCases.AddUserTC_002@3532ec19]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
 </table>
